<!--
  ~ Copyright 2017 Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~
  -->

<resources>
    <string name="app_name">Awesome Place</string>
    <string name="register_button_text">Register</string>
    <string name="submit_button_text">Submit</string>
    <string name="done_button_text">Done</string>
    <string name="next_button_text">Next&gt;</string>
    <string name="back_button_text">&lt;Back</string>
    <string name="add_child_button_text">Add Child</string>
    <string name="export_data_button_text">Export Data</string>
    <string name="import_data_button_text">Import Data</string>
    <string name="agree_button_text">I Agree</string>
    <string name="do_not_agree_button_text">I do not Agree</string>
    <string name="parent_name"><sup>*</sup>Parent name</string>
    <string name="parent_email">Email</string>
    <string name="parent_phone"><sup>*</sup>Phone</string>
    <string name="children">Children</string>
    <string name="childone_name"><sup>*</sup>Child\'s name</string>
    <string name="childone_dob"><sup>*</sup>Child\'s Date of Birth</string>
    <string name="childtwo_name">Second Child\'s name</string>
    <string name="childtwo_dob">Second Child\'s Date of Birth</string>
    <string name="childone_details_missing">Enter details of atleast one child</string>
    <string name="agreement_text">I am happy with the play area safety factors and will not hold management of 
        <b>Awesome Place</b> liable for any injury or accident caused while my child is playing in the playarea 
        or get into a conflict with another child/Parent in the playarea.\n\nI agree to STAY ALERT on phone and 
        RESPOND if I have dropped my child and moved away from awesome place premises.\n\nI agree to pay Rs.500/-
        if the child does potty or Rs.200/- if the child urinates or vomit in the premises as housekeeping charges.
    </string>
    <string name="confirmation_sms">Thank you for registering with Awesome Place.</string>
    <string name="interested_in_bday">Are you interested in Birthday venue?</string>
    <string name="interested_in_kids_act">Are you interested in Kids Activities?</string>
    <string name="parent_location">Location</string>
    <string name="parent_notes">Notes</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="terms_and_condition_agree"><sup>*</sup>I agree with\u0020</string>
    <string name="terms_link">terms and condition</string>
    <string name="terms_not_accepted">Please accept terms and condition to proceed</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="location">Location</string>
    <string-array name="location_array">
        <item>Elements - Nagawara</item>
        <!--item>Inorbit - Whitefield</item-->
        <item>Forum - Whitefield</item>
    </string-array>
    <string name="register_screen_instruction">Enter correct phone number for security reasons.
        Remove phone from silent mode.
    </string>
    <string name="thank_you_text">
        Thank you. You will now receive an sms. Please show this sms to staff who will then let the child in.
    </string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="btn_start_again_txt">Start Again</string>
    <string name="terms_cond_header">Please review the terms and condition below</string>
    <string name="take_parent_photo">Take the photo of the parent</string>
    <string name="btn_print_txt">Re-Print Label</string>
    <string name="entry_label_desc">The entry label</string>
</resources>
