<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_vertical_margin"
              tools:context="com.saurasin.sbtentertainment.LoginActivity">
    <ImageView android:layout_width="match_parent"
               android:layout_height="132dp"
               android:src="@drawable/awesome_place"
               android:id="@+id/logo"
               android:contentDescription="@string/app_name"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
            
            <LinearLayout android:layout_width="match_parent" 
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:weightSum="4"
                          android:layout_marginTop="@dimen/login_screen_spinner_margin"
                          android:layout_marginLeft="@dimen/activity_horizontal_margin"
                          android:layout_marginRight="@dimen/activity_horizontal_margin">
                <TextView android:layout_width="0dp"
                          style="?android:textAppearanceMedium"
                          android:layout_height="wrap_content"
                          android:text="@string/location"
                          android:id="@+id/location"
                          android:layout_weight="1"
                          android:background="@android:color/darker_gray"
                          android:textStyle="bold"
                          android:gravity="center"/>
                <Spinner
                        android:id="@+id/location_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"/>
            </LinearLayout>
            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
