<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    <Button android:layout_width="match_parent"
            style="?android:textAppearanceSmall"
            android:id="@+id/submit_button"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:clickable="true"
            android:onClick="onSave"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/initial_screen_button_text_size"
            android:textStyle="bold"/>

    <ScrollView android:layout_width="wrap_content" 
                android:layout_height="match_parent"
                android:layout_above="@+id/submit_button"
                android:fillViewport="true">
        <RelativeLayout android:layout_width="match_parent" 
                        android:layout_height="wrap_content" >
            
        <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_layout"
                    app:hintTextAppearance="@style/TextLabel">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/parent_phone"
                      android:id="@+id/parentPhoneEdit"
                      android:inputType="phone"
                      android:textSize="@dimen/initial_screen_button_text_size"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_layout"
                    app:hintTextAppearance="@style/TextLabel"
                    android:layout_below="@id/phone_layout">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/parent_email"
                      android:id="@+id/parentEmailEdit"
                      android:inputType="textEmailAddress"
                      android:textSize="@dimen/initial_screen_button_text_size"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/parent_name_layout"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_below="@id/email_layout">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/parent_name"
                      android:id="@+id/parentNameEdit"
                      android:maxLines="1"
                      android:singleLine="true"
                      android:textSize="@dimen/initial_screen_button_text_size"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/child_name_layout"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_below="@id/parent_name_layout">  
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/childone_name"
                      android:id="@+id/childone_name_edit"
                      android:maxLines="1"
                      android:singleLine="true"
                      android:textSize="@dimen/initial_screen_button_text_size"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/child_dob_layout"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_below="@id/child_name_layout">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/childone_dob"
                      android:id="@+id/childone_dob_edit"
                      android:inputType="date"
                      android:textSize="@dimen/initial_screen_button_text_size"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/childtwo_name_layout"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_below="@id/child_dob_layout">
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/childtwo_name"
                          android:id="@+id/childtwo_name_edit"
                          android:maxLines="1"
                          android:singleLine="true"
                          android:textSize="@dimen/initial_screen_button_text_size"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/childtwo_dob_layout"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_below="@id/childtwo_name_layout">
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/childtwo_dob"
                          android:id="@+id/childtwo_dob_edit"
                          android:inputType="date"
                          android:textSize="@dimen/initial_screen_button_text_size"
                />
        </android.support.design.widget.TextInputLayout>
            
            
            <CheckBox android:id="@+id/checkbox_bday"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/interested_in_bday"
                      android:textSize="@dimen/text_smaller"
                      android:layout_below="@id/childtwo_dob_layout"/>
            <CheckBox android:id="@+id/checkbox_kids_activities"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/interested_in_kids_act"
                      android:textSize="@dimen/text_smaller"
                      android:layout_below="@id/checkbox_bday"/>
            <CheckBox android:id="@+id/checkbox_terms"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/terms_and_condition"
                      android:textSize="@dimen/text_smaller"
                      android:layout_below="@id/checkbox_kids_activities"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="@dimen/text_view_height"
                      android:text="@string/view_terms_and_cond"
                      android:textAlignment="viewEnd"
                      android:gravity="end"
                      android:layout_below="@id/checkbox_terms"
                      android:clickable="true"
                      android:textColor="@color/colorPrimaryDark"
                      android:onClick="onViewTerms"
                      android:textSize="@dimen/text_smaller"
            />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>