<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/background_light"
        tools:context="com.saurasin.sbtentertainment.InitialActivity">
    
    <Button android:layout_width="match_parent"
            style="?android:textAppearanceSmall"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/register_button_text"
            android:id="@+id/register_btn"
            android:clickable="true"
            android:onClick="onRegister"
            android:textStyle="bold"/>
    <ImageView android:layout_width="match_parent" 
               android:layout_height="132dp"
               android:layout_alignParentTop="true"
               android:src="@drawable/awesome_place" 
               android:id="@+id/logo"
               android:contentDescription="@string/app_name"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="@dimen/initial_screen_button_height"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/initial_screen_button_text_size"
                  android:hint="@string/phone_number_text"
                  android:id="@+id/phone_number_input"
                  android:clickable="true"
                  android:inputType="phone" 
                  android:imeOptions="actionGo"/>
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>
