<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@android:color/background_light">

    <Button android:layout_width="match_parent" 
            android:id="@+id/agree_button"
            style="?android:textAppearanceSmall"
            android:layout_height="wrap_content"
            android:text="@string/agree_button_text"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:onClick="onAgree"
            android:textStyle="bold"/>
    <Button android:layout_width="match_parent"
            android:id="@+id/do_not_agree_button"
            style="?android:textAppearanceSmall"
            android:layout_height="wrap_content"
            android:text="@string/do_not_agree_button_text"
            android:layout_above="@id/agree_button"
            android:clickable="true"
            android:onClick="onDisagree"
            android:textStyle="bold" />


    <ScrollView android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_above="@id/do_not_agree_button"
                android:fillViewport="true">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/agreement_text"
                      android:layout_marginLeft="@dimen/activity_horizontal_agreement_margin"
                      android:layout_marginRight="@dimen/activity_horizontal_agreement_margin"
                      android:layout_marginBottom="@dimen/activity_vertical_agreement_margin"
                      android:layout_marginTop="@dimen/activity_vertical_agreement_margin"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>