<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/page_padding_portrait"
                android:paddingRight="@dimen/page_padding_portrait"
                android:paddingTop="@dimen/page_padding_portrait"
                android:paddingBottom="@dimen/page_padding_portrait"
                android:background="@android:color/background_light">

    <ScrollView android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:fillViewport="true">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <ImageView android:layout_width="match_parent" 
                       android:layout_height="wrap_content"
                       android:layout_centerHorizontal="true"
                       android:id="@+id/entry_label"
                       android:scaleType="fitCenter"
                       android:contentDescription="@string/entry_label_desc"
                       android:layout_alignParentStart="true"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="@dimen/text_smaller"
                      android:text="@string/thank_you_text"
                      android:layout_marginBottom="@dimen/activity_vertical_agreement_margin"
                      android:layout_marginTop="@dimen/activity_vertical_agreement_margin"
                      android:layout_below="@id/entry_label"
                      android:id="@+id/thank_you_txt"/>
            <LinearLayout android:layout_width="wrap_content" 
                          android:layout_height="wrap_content"
                          android:layout_below="@id/thank_you_txt"
                          android:layout_alignParentEnd="true">
                <Button android:layout_width="wrap_content"
                        android:id="@+id/print_button"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/btn_print_txt"
                        android:background="@drawable/rounded_blue"
                        android:textColor="@android:color/background_light"
                        android:textSize="@dimen/text_smaller"
                        android:layout_marginTop="@dimen/activity_horizontal_agreement_margin"
                        android:layout_marginEnd="@dimen/single_padding"
                        android:padding="@dimen/internal_padding"
                        android:clickable="true"
                        android:onClick="onPrint"/>
                <Button android:layout_width="wrap_content"
                        android:id="@+id/submit_button"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/btn_start_again_txt"
                        android:background="@drawable/rounded_blue"
                        android:textColor="@android:color/background_light"
                        android:textSize="@dimen/text_smaller"
                        android:layout_marginTop="@dimen/activity_horizontal_agreement_margin"
                        android:padding="@dimen/internal_padding"
                        android:clickable="true"
                        android:onClick="onSubmit"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
